# astarte

./: .dockerignore  .gitignore  AUTHORS.md  CHANGELOG.md  docker-compose.dev.yml  docker-compose.yml  envf  flake.nix  make-it-stop.nu  trigger.json
.github/: pull_request_template.md
.github/workflows/: astarte-apps-build-workflow.yaml  astarte-build-workflow.yaml  astarte-e2e-next-test-build-workflow.yaml  astarte-end-to-end-test-workflow.yaml  fast-forward.yaml  publish-release-to-dockerhub-workflow.yaml  publish-snapshot-to-dockerhub-workflow.yaml  publish-tool-release-to-dockerhub-workflow.yaml  publish-tool-snapshot-to-dockerhub-workflow.yaml
apps/astarte_appengine_api/: Dockerfile  mix.exs
apps/astarte_appengine_api/config/: test.exs
apps/astarte_appengine_api/src/: device.gleam
apps/astarte_appengine_api/test/: astarte_appengine_api_test.gleam  (+1 more)
apps/astarte_data_updater_plant/: mix.exs
apps/astarte_housekeeping/: mix.exs
apps/astarte_pairing/: mix.exs
apps/astarte_realm_management/: mix.exs
apps/astarte_trigger_engine/: mix.exs
doc/: mix.exs  swagger-ui-index.html
libs/astarte_data_access/: mix.exs
libs/astarte_fdo/: mix.exs
tools/astarte-e2e-next/: Cargo.toml  Dockerfile  flake.nix
tools/astarte-e2e-next/astarte-e2e-cli/: Cargo.toml
tools/astarte-e2e-next/astarte-e2e-cli/src/: config.rs  main.rs
tools/astarte-e2e-next/astarte-e2e-cli/src/interfaces/device/: individual_datastream.rs
tools/astarte_device_fleet_simulator/: mix.exs
tools/astarte_e2e/: mix.exs
tools/astarte_export/: mix.exs
tools/astarte_import/: mix.exs
(+136 files in other folders)
